2013-12-20  Martin Rudalics  <rudalics@gmx.at>

	Remove scroll_bar_actual_width from frames.
	* frame.h (struct frame): Remove scroll_bar_actual_width slot.
	* frame.c (Fscroll_bar_width): Return scroll bar area width.
	(x_figure_window_size):
	* nsterm.m (x_set_window_size):
	* widget.c (set_frame_size):
	* w32term.c (x_set_window_size):
	* xterm.c (x_set_window_size, x_set_window_size_1): Don't set
	scroll_bar_actual_width.

	Convert scroll_bar members to integers on Windows.
	* w32term.h (struct scroll_bar): Convert top, left, width,
	height, start, end and dragging to integers.
	* w32fns.c (w32_createscrollbar): Remove XINT conversions for
	scroll_bar members.
	* w32term.c (w32_set_scroll_bar_thumb)
	(w32_scroll_bar_handle_click): Remove XINT conversions for
	scroll_bar members.  Treat bar->dragging as integer.
	(x_scroll_bar_create): Call ALLOCATE_PSEUDOVECTOR with "top" as
	first element.  Remove XINT conversions for scroll_bar members.
	(w32_set_vertical_scroll_bar, x_scroll_bar_report_motion):
	Remove XINT conversions for scroll_bar members.

	Fix assignment for new window total sizes.
	* window.c (Fwindow_resize_apply_total): Assign values for
	minibuffer window.

2013-12-20  Chong Yidong  <cyd@gnu.org>

	* textprop.c (Fadd_face_text_property): Doc fix.  Rename `appendp'
	argument to `append'.

2013-12-19  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (extend_face_to_end_of_line): Use default face, not the
	current text face, for extending the face of the display margins.
	(Bug#16192)

	* casefiddle.c (Fupcase_word, Fdowncase_word, Fcapitalize_word):
	Doc fix.  (Bug#16190)

2013-12-19  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (KEY_NS_DRAG_FILE, KEY_NS_DRAG_COLOR, KEY_NS_DRAG_TEXT):
	Remove.

	* nsterm.m (Qfile, Qurl): New.
	(EV_MODIFIERS2): New macro.
	(EV_MODIFIERS): Use EV_MODIFIERS2.
	(ns_term_init): Remove font and color from DND, does not work on
	newer OSX, and other ports don't have them.
	(performDragOperation:): Handle modifiers used during drag.